[package]
name = "node-native-addon"
version = "0.1.0"
authors = ["Eduardo Sánchez <whipshout@gmail.com>"]
description = "Node native addon"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2.0.0-alpha.4", features = ["full"]}
napi-derive = {version = "2.0.0-alpha.6", features = ["type-def"]}
sha2 = "0.9.8"
uuid = { version = "0.8", features = ["v4", "v5"] }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"

[build-dependencies]
napi-build = "1"